--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,13 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0.81"
-serde = "1.0.197"
+reqwest = { version = "0.12.2", features = ["gzip", "json"]}
+serde = { version = "1.0.197", features = ["derive"]}
 serde_json = "1.0.114"
+
+[dev-dependencies]
+dotenv = "0.15.0"
+tokio = { version = "1", features = ["full"] }
 
 [lib]
 path = "src/lib.rs"
