--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ concurrency:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    environment:
+      name: "test"
+    env:
+      TURBOPUFFER_API_KEY: ${{ secrets.TURBOPUFFER_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
