--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,19 @@
 name = "turbopuffer-client"
 description = "Client for the turbopuffer vector database"
 authors = ["Ragkit <hi@ragkit.com>"]
-version = "0.0.0"
+version = "0.0.1"
 edition = "2021"
 license = "MIT"
 
 [dependencies]
 anyhow = "1.0.81"
-serde = "1.0.197"
+reqwest = { version = "0.12.2", features = ["gzip", "json"]}
+serde = { version = "1.0.197", features = ["derive"]}
 serde_json = "1.0.114"
+
+[dev-dependencies]
+dotenv = "0.15.0"
+tokio = { version = "1", features = ["full"] }
 
 [lib]
 path = "src/lib.rs"
