--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ repository = "https://github.com/ragkit/turbopuffer-client"
 homepage = "https://github.com/ragkit/turbopuffer-client"
 
 [dependencies]
-anyhow = "1.0"
 reqwest = { version = "0.12", features = ["gzip", "json"]}
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+thiserror = "1.0"
+tracing = "0.1"
 
 [dev-dependencies]
 dotenv = "0.15"
