--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "turbopuffer-client"
 description = "Client for the turbopuffer vector database"
 authors = ["Ragkit <hi@ragkit.com>"]
-version = "0.0.2"
+version = "0.0.3"
 edition = "2021"
 license = "MIT"
 documentation = "https://docs.rs/turbopuffer-client/latest/turbopuffer-client/"
@@ -10,10 +10,11 @@ repository = "https://github.com/ragkit/turbopuffer-client"
 homepage = "https://github.com/ragkit/turbopuffer-client"
 
 [dependencies]
-anyhow = "1.0"
 reqwest = { version = "0.12", features = ["gzip", "json"]}
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+thiserror = "1.0"
+tracing = "0.1"
 
 [dev-dependencies]
 dotenv = "0.15"
